added page goods

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 /* Main */
 .main {
   flex-grow: 1;
-  background-color: #5959590d;
+  background-color: #59595905;
 }
 
 /* Section banner */
@@ -90,10 +90,11 @@ body {
 }
 
 .banner-item {
-  background-image: url(./images/banners/banner.jpg);
+  background: #ffffb8;
+  background-image: url(./images/banners/bannerImg.png);
   background-repeat: no-repeat;
   background-position: center right;
-  background-size: cover;
+  background-size: contain;
   padding: 68px;
   border-radius: 10px;
 }
@@ -116,43 +117,287 @@ body {
 }
 
 /* Section products */
-.products {
-}
-
+/* products-header */
 .products-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .products-header--title {
   font-weight: 700;
   font-size: 36px;
   color: #000;
+  margin: 0;
 }
 
 .products-header--search {
-    border-radius: 2px;
-    border: 1px solid #d9d9d9;
-    background: #fff;
-    min-width:  306px;
-    height: 34px;
-    padding: 5px 12px;
+  border-radius: 2px;
+  border: 1px solid #d9d9d9;
+  background: #fff;
+  min-width: 306px;
+  height: 34px;
+  padding: 5px 12px;
 }
 
 .products-header--search:focus {
-    outline: none;
-    border: 1px solid #d9d9d9;
+  outline: none;
+  border: 1px solid #d9d9d9;
 }
 
 .products-header--search::placeholder {
-    color: #bfbfbf;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
+  color: #bfbfbf;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
 }
 
-/* Section products */
+/* products-wrapper */
+.products-wrapper {
+  margin: 44px 0 90px 0;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  column-gap: 24px;
+}
+
+.products-card {
+  width: calc((100% - 48px) / 3);
+  border-radius: 7px;
+  background: #fff;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  text-decoration: none;
+}
+
+.products-card__image {
+  width: 100%;
+}
+
+.products-card__image img {
+  width: 100%;
+}
+
+.products-card__description {
+  padding: 20px 24px 34px 24px;
+}
+
+.products-card__description--row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.products-card__description--row:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.products-card__description--title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  color: #000;
+}
+
+.products-card__description--badge {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 167%;
+  color: #fff;
+  background-color: #000;
+  padding: 1px 8px;
+}
+
+.products-card__description-info {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  column-gap: 25px;
+}
+
+.products-card__description-info--rating {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 178%;
+  color: #ffc107;
+}
+
+.products-card__description-info--price,
+.products-card__description-info--group {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 178%;
+  color: #8c8c8c;
+}
+
+.products-card__description-info--group {
+  position: relative;
+}
+
+.products-card__description-info--group::before {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #8c8c8c;
+  position: absolute;
+  left: -28%;
+  top: 13px;
+}
+
+/* Page goods */
+.products-card__description--name {
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 133%;
+  color: #000;
+}
+
+.products-card__description--text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  color: #8c8c8c;
+}
+
+.products-card__description--controls {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  column-gap: 30px;
+  margin-top: 24px;
+}
+
+.products-card__description-controls--price {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 160%;
+  color: #000;
+}
+
+/* Modal */
+.card-modal__overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+}
+
+.card-modal__overlay.open {
+  display: block;
+  display: flex;
+}
+
+.card-modal {
+  max-width: 780px;
+  width: 100%;
+  padding: 40px 45px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+.card-modal__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.card-modal__header--title {
+  font-weight: 700;
+  font-size: 36px;
+  color: #000;
+  margin: 0;
+}
+
+.card-modal__header--close {
+  cursor: pointer;
+}
+
+.card-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.card-item:not(:last-child) {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.card-item__title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 178%;
+  color: #000;
+  margin: 0;
+}
+
+.card-item__controls {
+  display: flex;
+  align-items: center;
+}
+
+.card-item__controls--price {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 160%;
+  color: #000;
+  margin-right: 47px;
+}
+
+.card-item__controls button {
+  border: 1px solid #40a9ff;
+  color: #1890ff;
+}
+
+.card-item__controls--count {
+  margin: 0 15px;
+}
+
+.card-modal__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.card-modal__footer--price {
+  font-weight: 700;
+  font-size: 20px;
+  color: #fafafa;
+  border-radius: 5px;
+  padding: 15px 20px;
+  background: #262626;
+}
+
+.card-modal__footer--controls {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.btn-modal {
+  border: none;
+}
 
 /* Footer */
 .footer {
@@ -203,12 +448,26 @@ body {
   cursor: pointer;
 }
 
+/* Adaptive */
 @media (max-width: 991px) {
+  .banner-item {
+    background-image: none;
+  }
   .banner-item--title {
     max-width: 100%;
   }
 
   .banner-item--subtitle {
     max-width: 100%;
+  }
+
+  .products-card {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media (max-width: 768px) {
+  .products-card {
+    width: 100%;
   }
 }
